// 期权期货
// python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. option_futures.proto

syntax = "proto3";

option java_package = "com.example.ffbackend.rpc.proto";
option java_outer_classname = "OptionFuturesProto";

service OptionFutures{
    //=========================================================
    //期权部分函数文档
    //=========================================================
    rpc PortfolioDelta(PortfolioDeltaInput) returns (PortfolioDeltaOutput){}

    rpc PortfolioGamma(PortfolioGammaInput) returns (PortfolioGammaOutput){}

    rpc PortfolioVega(PortfolioVegaInput) returns (PortfolioVegaOutput){}

    rpc PortfolioTheta(PortfolioThetaInput) returns (PortfolioThetaOutput){}



    //=========================================================
    //期货部分函数文档
    //=========================================================
}

//=========================================================
//期权部分函数文档
//=========================================================

message PortfolioDeltaInput{

}

message PortfolioDeltaOutput{

}

message PortfolioGammaInput{

}

message PortfolioGammaOutput{

}

message PortfolioVegaInput{

}

message PortfolioVegaOutput{

}

message PortfolioThetaInput{

}

message PortfolioThetaOutput{

}














